# SETR_Labo5_EQ1

./: CMakeLists.txt  README.md  audioEmitter.c  audioReceiver.c  bluetooth_com.c  bluetooth_com.h  comEmitter.c  comReceiver.c  compression.c  compression.h  compression_vorbis.c  compression_vorbis.h  constants.h  delay.c  distorsion.c  highpass.c  lowpass.c  pipe_com.c  pipe_com.h  sendToPi.sh  socket_com.c  socket_com.h  template_effet.c
doc/: rapport.doc  ~$apport.doc
